View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026433 | Open CASCADE | OCCT:Visualization | public | 2015-07-14 17:06 | 2016-04-20 15:50 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.1 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026433: AIS_Dimension may attempt to modify the state of default Drawer shading aspect | ||||
Description | In Advanced Visualization Demo AIS_Dimension objects were disabling OpenGL lighting for the rest of the scene. | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26433 has been created by duv. SHA-1: 954bf3bf9b56282c270b75cea34ca42fc168ffec Detailed log of new commits: Author: duv Date: Tue Jul 14 17:42:27 2015 +0300 0026433: AIS_Dimension may attempt to modify the state of default Drawer shading aspect |
|
Please, move the blockif (!myDrawer->HasOwnShadingAspect()) { ... } inside the block // draw text if (myDrawer->DimensionAspect()->IsTextShaded()) { ... } i.e. at the location where myDrawer->ShadingAspect() is actually modified. Else there is no visible logical connection between the two blocks, and the newly added one looks a bit oddly, especially without any comments. |
|
Dear Anastasia, please update the patch in accordance with Sergey remarks if problem has not been solved in scope of other patches. |
|
Branch CR26433 has been updated forcibly by aba. SHA-1: 3f3899ecc699633e3a5351b2c8abbc12ca16ea74 |
|
Dear kgv, could you please review patch in the updated and rebased branch CR26433? |
|
Please test the patch. |
|
Dear BugMaster, Branch CR26433 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 3f3899ecc699633e3a5351b2c8abbc12ca16ea74 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 134 (134 on master) products component: Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 89448600 / 89711291 [-0.29%] Total CPU difference: 19300.210000000145 / 19353.80000000006 [-0.28%] Testing on Windows: Total MEMORY difference: 54599165 / 54607233 [-0.01%] Total CPU difference: 17601.35882849873 / 18177.392520998823 [-3.17%] |
|
Branch CR26433 has been deleted by kgv. SHA-1: 3f3899ecc699633e3a5351b2c8abbc12ca16ea74 |
occt: master d2dfbc4d 2015-07-14 14:42:27
Committer: bugmaster Details Diff |
0026433: AIS_Dimension may attempt to modify the state of default Drawer shading aspect - Added checks to allow modification of only own aspects in AIS_Dimension::DrawText() |
Affected Issues 0026433 |
|
mod - src/AIS/AIS_Dimension.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-14 17:06 |
|
New Issue | |
2015-07-14 17:06 |
|
Assigned To | => duv |
2015-07-14 17:06 |
|
Status | new => assigned |
2015-07-14 17:42 | git | Note Added: 0043013 | |
2015-07-14 17:49 |
|
Assigned To | duv => san |
2015-07-14 17:49 |
|
Status | assigned => resolved |
2015-07-14 17:49 |
|
Steps to Reproduce Updated | |
2015-07-14 19:36 |
|
Note Added: 0043018 | |
2015-07-14 19:36 |
|
Assigned To | san => duv |
2015-07-14 19:36 |
|
Status | resolved => assigned |
2015-11-17 15:51 | kgv | Assigned To | duv => aba |
2015-11-17 15:51 | kgv | Product Version | => 6.9.1 |
2015-11-17 15:54 | kgv | Note Added: 0048290 | |
2015-11-17 15:54 | kgv | Severity | minor => trivial |
2015-12-21 15:15 | git | Note Added: 0049365 | |
2015-12-21 15:34 |
|
Note Added: 0049368 | |
2015-12-21 15:34 |
|
Assigned To | aba => kgv |
2015-12-21 15:34 |
|
Status | assigned => resolved |
2015-12-21 16:08 | kgv | Note Added: 0049372 | |
2015-12-21 16:08 | kgv | Assigned To | kgv => bugmaster |
2015-12-21 16:08 | kgv | Status | resolved => reviewed |
2015-12-21 17:07 |
|
Assigned To | bugmaster => apv |
2015-12-22 15:17 |
|
Test case number | => Not needed |
2015-12-22 16:04 |
|
Note Added: 0049462 | |
2015-12-22 16:04 |
|
Assigned To | apv => bugmaster |
2015-12-22 16:04 |
|
Status | reviewed => tested |
2015-12-25 19:04 | bugmaster | Changeset attached | => occt master d2dfbc4d |
2015-12-25 19:04 | bugmaster | Status | tested => verified |
2015-12-25 19:04 | bugmaster | Resolution | open => fixed |
2016-04-17 13:46 | git | Note Added: 0052941 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |