0026433: AIS_Dimension may attempt to modify the state of default Drawer shading aspect